--- a/24CSR013/day1/style/style.css
+++ b/24CSR013/day1/style/style.css
@@ -2,48 +2,172 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    border: 1px solid red;
+    /* border: 1px solid red; */
+    color: white;
+    font-family: in;
+}
+
+.header {
+    padding: 12px;
+    margin: 5px;
+    font-family: dm;
+}
+
+body {
+    background-color: rgb(0, 0, 0);
+
+}
+
+.upcoming {
+    padding: 12px;
+    margin: 5px;
+}
+
+.info {
+    padding: 12px;
+    margin: 5px;
+}
+
+.title {
+    font-family: dm;
+    text-align: center;
+    padding: 12px;
+    margin: 5px;
+    border-radius: 10px;
+    border-color: black;
+    background-color: white;
+}
+.title * {
+    font-family: dm;
+}
+.title,
+.title * {
+    color: black;
+}
+
+.uepost {
+    padding: 12px;
+    margin: 5px;
+    border-radius: 10px;
+    border: 2px solid black;
+    background-color: white;
+}
+
+.posts {
+    border-radius: 10px;
+    padding: 12px;
+    margin: 5px;
+    background-color: white;
+}
+
+.uepost,
+.uepost * {
+    color: black;
 }
 
 
 
 .header {
     text-align: center;
+    padding: 12px;
+    margin: 12px;
 }
 
 .body {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 
 .info {
     display: flex;
     flex-direction: column;
-    width: 35%;
+    width: 25%;
     flex-shrink: 0;
 }
 
 .upcoming {
-    width: 65%;
+    width: 70%;
     flex-shrink: 0;
 }
 
-.nav > ul > li{
+.nav>ul>li {
     display: inline;
 }
-.nav > ul > li > a{
+
+.nav>ul>li>a {
     text-decoration: none;
-    color: black;
-    
+
 }
+
 .footer {
     text-align: center;
     padding: 10px;
     width: 100%;
 }
-.socials > a {
+
+.btn {
+    display: inline-block;
+    padding: 10px 20px;
+    color: white;
     text-decoration: none;
-    color: black;
-    margin: 0 10px;
+    border: 1px solid black;
+    border-radius: 5px;
+    cursor: pointer;
+
 }
+.posttitle * {
+    padding: 0px;
+    margin: 0px;
+}
+.posttitle h1 {
+    margin: 0;
+    padding: 0;
+    font-family: dm;
+}
+
+.btn:hover {
+    transition: background-color 0.3s ease;
+    background-color: gray;
+}
+
+
+
+@font-face {
+    font-family: 'dm';
+    src: url('/src/font/dm.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'in';
+    src: url('/src/font/in.ttf') format('truetype');
+}
+
+.posttitle *{
+    font-family: dm;
+}
+
+.details {
+    border-radius: 10px;
+    padding: 10px;
+}
+.details * {
+    padding: 3px;
+}
+.d2 {
+    font-size: 30px;
+
+}
+.banner > img{
+    width: 100%;
+}
+.d2 > div > a {
+    border: 2px solid black;
+    padding: 10px;
+    text-decoration: none;
+}
+.details {
+    display: flex;
+    justify-content: space-between;
+}
+
+
